k8s-infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: myapp.local
      http:
        paths:
          # 🔹 Backend API
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: gin-backend
                port:
                  number: 8080

          # 🔹 Frontend
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: nextjs-frontend
                port:
                  number: 3000
